--- a/NetWorth.html
+++ b/NetWorth.html
@@ -49,37 +49,46 @@
         const netWorthData = {
           apollo800813: [
             321300374, 307648495, 342430507, 355924278, 372533623, 363020357,
+            360878894,
           ],
-          thecooliguy791: [1483624, 1028020, 882939, 1025384, 1014322, 1069963],
+          thecooliguy791: [
+            1483624, 1028020, 882939, 1025384, 1014322, 1069963, 944709,
+          ],
           Im_Yuno: [
             4250608513, 4509230500, 4359635916, 4383757995, 4365878203,
-            5440159994,
+            5440159994, 5412491585,
           ],
           Im_Gwimace: [
             506073516, 315939582, 319002172, 338418178, 335613018, 347915639,
+            351633680,
           ],
           aura7: [
             3029459087, 3147400675, 3513437068, 3622651737, 3702994487,
-            3631900261,
+            3631900261, 3625421893,
           ],
           Ramy08: [
             382282642, 382118434, 395156036, 414522624, 413020009, 395353264,
+            394726508,
           ],
           EchoFighter310: [
             715455296, 741353101, 767880957, 797281179, 794034044, 785556461,
+            785703488,
           ],
           Sidosaurus_Rex: [
             553946170, 556990994, 550547511, 569986156, 563558099, 564671117,
+            567048729,
           ],
           DDraco_Toast: [
             568780988, 460694294, 474114691, 482892238, 483819703, 496658361,
+            488138035,
           ],
           difficultentrpot: [
             2422003321, 2459937958, 2477306563, 2628831060, 2679624008,
-            2702209034,
+            2702209034, 2723610070,
           ],
           FARPlNHA: [
             341147813, 341147813, 341147813, 341147813, 359103747, 320138687,
+            309708454,
           ],
         };
 
